<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.0.1</version>
  <description>
    Master launch for my_robot.
    Starts Gazebo simulation, robot state publisher,
    ROS-Gazebo bridge, PID controller and
    Impedance controller in one command.
  </description>
  <maintainer email="you@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Depend on all robot packages -->
  <exec_depend>my_robot_description</exec_depend>
  <exec_depend>my_robot_controllers</exec_depend>

  <!-- ROS2 launch dependencies -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>